[package]
name = "birdseye"
version = "0.3.8"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"
description = "Graphical disk space analyzer"
license = "MIT"


[package.metadata.bundle]
name = "birdseye"
identifier = "com.github.woelper.birdseye"
icon = ["icon.png"]
copyright = "Johann Woelper"
category = "Developer Tool"
short_description = "Check how your diskspace is used"
long_description = """
Use birdseye to get an overview of what uses most space on your filesystem.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.13.1" # Gives us egui, epi and web+native backends
diskspace_insight = "0.1.7"
#diskspace_insight = { path = "../diskspace-insight" }
dirs = "3.0.1"
bytesize = "1.0.1"
log = "0.4.11"
env_logger = "0.8.1"
